Fixed android overflow problem.

--- a/html/style.css
+++ b/html/style.css
@@ -230,8 +230,6 @@ h3.errorMessage {
 	font-size: 1.6em;
 	margin: 10px;
 	padding: 5px;
-	overflow-y: auto;
-	overflow-x: hidden;
 }
 
 .tabNameLabel {
@@ -672,6 +670,13 @@ h3.errorMessage {
 	color: #999;
 }
 
+
+/* Overthrow CSS:
+   Enable overflow: auto on elements with overthrow class when html element has overthrow class too */
+.overthrow-enabled .overthrow {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+}
 .wrappedText {
 	display: block;
 	float: left;
